# rust_prod

./: .env  Cargo.toml  Dockerfile  configurations.yaml  notes  sqlx-data.json
configurations/: base.yaml  local.yaml  production.yaml  test.yaml
migrations/: 20230316094027_create_subscriptions_table.sql  20230427122854_make_status_not_null_in_subscriptions.sql  20230427123607_create_subscription_tokens_table.sql  20230817141644_rename_password_users.sql  20230822075138_add_salt_to_users.sql  20231005063708_seed_user.sql  20240130105400_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  state_session.rs  telemetry.rs  utils.rs
src/authentication/: authentication.rs  middleware.rs  mod.rs
src/domains/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: home.rs  mod.rs  news_letters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  news_letters_back.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: endpoints.rs
tests/api/: change_password.rs  dashboard.rs  health_check.rs  helpers.rs  login.rs  main.rs  news_letter.rs  subscription_confirm.rs  subscriptions.rs
