[package]
name = "news_letter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "news_letter"
path = "src/lib.rs"

[dependencies]
actix-session = { git = "https://github.com/actix/actix-extras", branch = "master", version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.72"
argon2 = { version = "0.5.1", features = ["std"] }
base64 = "0.21.2"
chrono = "0.4.24"
config = "0.13.3"
env_logger = "0.10.0"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
htmlescape = "0.3.1"
log = "0.4.17"
migrate = "0.2.0"
postgres = "0.19.4"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.2.0"
sha2 = "0.10.7"
sha3 = "0.10.8"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0.44"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.3"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
validator = "0.16.0"
wiremock = "0.5.18"

[dev-dependencies]
once_cell = "1"
claims = "0.7.1"
fake = "2.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
serde_json = "1.0.96"
linkify = "0.9.0"
